--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "axios": "^0.27.2",
     "body-parser": "^1.20.0",
     "bootstrap": "^5.2.0",
-    "brain.js": "^2.0.0-beta.2",
+    "brain.js": "^1.4.10",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
