--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "babel-node": "babel-node --presets=@babel/preset-env",
-    "start": "webpack --mode development --config webpack.config.js && nodemon --exec npm run babel-node index.js --ignore /brain/model.js",
+    "start": "nodemon --exec npm run babel-node index.js --ignore /brain/model.js",
     "build": "webpack --mode development --config webpack.config.js",
     "build:prod": "webpack --mode production --config webpack.config.js",
     "test": "mocha *.test.js"
