--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "babel-node": "babel-node --presets=@babel/preset-env",
     "start": "nodemon --exec npm run babel-node index.js --ignore /brain/model.js",
-    "build": "webpack --mode development --config webpack.config.js",
+    "build": "webpack --mode production --config webpack.config.js",
     "build:prod": "webpack --mode production --config webpack.config.js",
     "test": "mocha *.test.js"
   },
