--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@babel/runtime": "7.18.9",
     "axios": "^0.27.2",
+    "babel-node": "^0.0.1-security",
     "body-parser": "^1.20.0",
     "bootstrap": "^5.2.0",
     "brain.js": "^1.4.10",
