--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "babel-node": "babel-node --presets=@babel/preset-env",
     "start": "npm run babel-node index.js",
-    "build": "webpack --mode production --config webpack.config.js",
+    "build": "webpack --mode development --config webpack.config.js",
     "build:prod": "webpack --mode production --config webpack.config.js",
     "test": "mocha *.test.js"
   },
